fixed table headers

--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -133,7 +133,7 @@
 						<td headers="metres">361.48</td>
 					</tr>
 					<tr>
-						<td colspan="2" headers="area metres">Clear inside length, cassion in place:</td>
+						<td colspan="2" headers="area">Clear inside length, cassion in place:</td>
 					</tr>
 					<tr>
 						<td headers="area">in stop&nbsp;1</td>
